[tool.poetry]
name = "hashdb-cli"
version = "0.1.2"
description = "Access the open analysis hashdb via cli"
authors = ["3c7 <3c7@posteo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/3c7/hashdb-cli"
repository = "https://github.com/3c7/hashdb-cli"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hashdb = "hashdb_cli:app"